@@ -25,23 +25,55 @@ namespace SJBR\StaticInfoTables\Cache;
  */
 class ClassCacheManager {
 
-	const CACHE_FILE_LOCATION = 'typo3temp/Cache/Code/cache_phpcode/StaticInfoTables/';
+	/**
+	 * Extension key
+	 *
+	 * @var string
+	 */
+	protected $extensionKey = 'static_info_tables';
 
 	/**
-	 * Builds the proxy files
+	 * @var \TYPO3\CMS\Core\Cache\Frontend\FrontendInterface
+	 */
+	protected $cacheInstance;
+ 
+	/**
+	 * Constructor
+	 */
+	public function __construct() {
+		$this->initializeCache();
+	}
+ 
+	/**
+	 * Initialize cache instance to be ready to use
 	 *
-	 * @return array information for the autoloader
+	 * @return void
+	 */
+	protected function initializeCache() {
+		try {
+			$this->cacheInstance = $GLOBALS['typo3CacheManager']->getCache($this->extensionKey);
+		} catch (\TYPO3\CMS\Core\Cache\Exception\NoSuchCacheException $e) {
+			$this->cacheInstance = $GLOBALS['typo3CacheFactory']->create(
+				$this->extensionKey,
+				$GLOBALS['TYPO3_CONF_VARS']['SYS']['caching']['cacheConfigurations'][$this->extensionKey]['frontend'],
+				$GLOBALS['TYPO3_CONF_VARS']['SYS']['caching']['cacheConfigurations'][$this->extensionKey]['backend']
+			);
+		}
+	}
+
+	/**
+	 * Builds and caches the proxy files
+	 *
+	 * @return void
 	 * @throws Exception
 	 */
 	public function build() {
-		$cacheEntries = array();
-
 		$extensibleExtensions = $this->getExtensibleExtensions();
 		foreach ($extensibleExtensions as $key => $extensionsWithThisClass) {
 			$extendingClassFound = FALSE;
 
 			// Get the file from static_info_tables itself, this needs to be loaded as first
-			$path = \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath('static_info_tables') . 'Classes/' . $key . '.php';
+			$path = \TYPO3\CMS\Core\Utility\ExtensionManagementUtility::extPath($this->extensionKey) . 'Classes/' . $key . '.php';
 			if (!is_file($path)) {
 				throw new Exception('given file "' . $path . '" does not exist');
 			}
@@ -58,15 +90,14 @@ class ClassCacheManager {
 
 			// If an extending class is found, the file is written and added to the autoloader info
 			if ($extendingClassFound) {
-				$cacheIdentifier = 'SJBR\\StaticInfoTables\\\\' . str_replace('/', '\\', $key);
+				$entryIdentifier = str_replace('/', '', $key);
 				try {
-					$cacheEntries[$cacheIdentifier] = $this->writeFile($code, 'staticInfoTables_' . $key);
+					$this->cacheInstance->set($entryIdentifier, $code, array(\TYPO3\CMS\Core\Cache\Frontend\FrontendInterface::TAG_CLASS));
 				} catch (Exception $e) {
 					throw new Exception($e->getMessage());
 				}
 			}
 		}
-		return $cacheEntries;
 	}
 
 	/**
@@ -90,47 +121,6 @@ class ClassCacheManager {
 			}
 		}
 		return $extensibleExtensions;
-	}
-
-	/**
-	 * Write the proxy file
-	 *
-	 * @param string $content
-	 * @param string $identifier identifier of the file
-	 * @return string path of the written file
-	 */
-	protected function writeFile($content, $identifier) {
-		$path = PATH_site . self::CACHE_FILE_LOCATION;
-		if (!is_dir($path)) {
-			\TYPO3\CMS\Core\Utility\GeneralUtility::mkdir_deep(PATH_site, self::CACHE_FILE_LOCATION);
-		}
-
-		$content = '<?php ' . LF . $content . LF . '}' . LF . '?>';
-
-		$path .= $this->generateFileNameFromIdentifier($identifier);
-
-		$success = \TYPO3\CMS\Core\Utility\GeneralUtility::writeFile($path, $content);
-		if (!$success) {
-			throw new RuntimeException('File "' . $path . '" could not be written');
-		}
-		return $path;
-	}
-
-	/**
-	 * Generate cache file name
-	 *
-	 * @param string $identifier identifier
-	 * @return string
-	 */
-	protected function generateFileNameFromIdentifier($identifier) {
-		if (!is_string($identifier) || empty($identifier)) {
-			throw new InvalidArgumentException('Given identifier is either not a string or empty');
-		}
-
-		$result = str_replace('/', '_', $identifier) . '.php';
-		$result = ucfirst($result);
-
-		return $result;
 	}
 
 	/**
@@ -202,13 +192,8 @@ class ClassCacheManager {
 	 * @return void
 	 */
 	public function clear() {
-		$path = PATH_site . self::CACHE_FILE_LOCATION;
-		if (is_dir($path)) {
-			\TYPO3\CMS\Core\Utility\GeneralUtility::rmdir($path, TRUE);
-		}
-		if (isset($GLOBALS['BE_USER'])) {
-			$GLOBALS['BE_USER']->writelog(3, 1, 0, 0, '[StaticInfoTables]: User %s has cleared the class cache', array($GLOBALS['BE_USER']->user['username']));
-		}
+		$this->cacheInstance->flush();
+		$GLOBALS['BE_USER']->writelog(3, 1, 0, 0, '[StaticInfoTables]: User %s has cleared the class cache', array($GLOBALS['BE_USER']->user['username']));
 	}
 
 	/**
@@ -216,8 +201,15 @@ class ClassCacheManager {
 	 *
 	 * @return void
 	 */
-	public function reBuild(&$params) {
-		if ($params['cacheCmd'] == 'all') {
+	public function reBuild(array $parameters = array()) {
+		$isValidCall = (
+			empty($parameters)
+			|| (
+				!empty($parameters['cacheCmd'])
+				&& \TYPO3\CMS\Core\Utility\GeneralUtility::inList('all,temp_cached', $parameters['cacheCmd'])
+			)
+		);
+		if ($isValidCall && isset($GLOBALS['BE_USER'])) {
 			$this->clear();
 			$this->build();
 		}
@@ -229,13 +221,12 @@ class ClassCacheManager {
 	 * @return void
 	 */
 	public function load() {
-		$path = PATH_site . self::CACHE_FILE_LOCATION;
-		if (!is_dir($path)) {
-			$this->build();
-		}
-		$classFiles = \TYPO3\CMS\Core\Utility\GeneralUtility::getFilesInDir($path, 'php', TRUE);
-		foreach ($classFiles as $classFile) {
-			require_once($classFile);
+		$entities = array_keys($GLOBALS['TYPO3_CONF_VARS']['EXTCONF'][$this->extensionKey]['entities']);
+		foreach ($entities as $entity) {
+			$entryIdentifier = 'DomainModel' . $entity;
+			if ($this->cacheInstance->has($entryIdentifier)) {
+				$this->cacheInstance->requireOnce($entryIdentifier);
+			}
 		}		
 	}
 }
